Added Header component

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,71 +1,9 @@
 body {
-    background-color: #9D9C9B;
-    padding: 0px;
-    margin: 0px;
+    background-color: #c3dbe3;
+    padding: 0;
+    margin: 0;
 }
 
-nav {
-    background-image: url(Spanienflagge.jpg);
-    background-position: center;
-    background-size: cover;
-    text-align: center;
-    height: 50px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-nav p {
-    font-size: x-large;
-}
-
-a {
-    color: black;
-    background-color: greenyellow;
-    border-radius: 1rem;
-    width: 300px;
-    height: 30px;
-    text-decoration: none;
-}
-
-.piccontainer1 {
-    width: 100%;
-}
-
-.piccontainer2 {
-    display: flex;
-    justify-content: space-around;
-    background-size: cover;
-}
-
-.sagradaPic,
-.gaudiPic {
-    height: 50vh;
-}
-
-.footer1 {
-    background-color: #FFE4C4;
-    margin: 1rem;
-    border-radius: 1rem;
-}
-
-.footer2 {
-    margin: 1rem;
-    padding: 0.5rem;
-}
-
-.home {
-    background-color: #FFE4C4;
-    margin: 1rem;
-    border-radius: 1rem;
-}
-
-.inlinehome {
-    margin: 1rem;
-    padding: 0.5rem;
-}
-
-.retrospective-image{
-    height: 40vh;
-    width: 30vh ;
+.header {
+    height: 10vh;
 }
