--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,8 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
 body {
     background-color: #c3dbe3;
     padding: 0;
@@ -6,4 +11,8 @@ body {
 
 .header {
     height: 10vh;
+}
+
+.footer {
+    height: 5vh;
 }
