--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,7 +1,31 @@
-.container {
+.main-picture-bg {
+    height: 70vh;
+    width: 70vw;
+    background-image: url(/public/assets/images/main.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.main-buttons {
+    height: 50%;
+}
+
+.modal-content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     text-align: center;
-    padding: 5vh 5vw;
+}
+
+.modal-buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.modal-buttons button {
+    margin: 0 5px;
 }
