--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,18 +1,42 @@
+* {
+    box-sizing: border-box;
+}
+
 html, body {
     height: 100%;
+    width: 100%;
     margin: 0;
 }
 
 body {
     background-color: #c3dbe3;
-    padding: 0;
-    margin: 0;
+}
+
+header, footer {
+    position: fixed;
+    width: 100%;
+    left: 0;
 }
 
 .header {
-    height: 10vh;
+    top: 0;
+    height: calc(var(--vh, 1vh) * 10); /* 10vh */
 }
 
 .footer {
-    height: 5vh;
+    bottom: 0;
+    height: calc(var(--vh, 1vh) * 5); /* 5vh */
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
+    gap: 2rem;
+    margin-top: calc(var(--vh, 1vh) * 10); /* 10vh */
+    margin-bottom: calc(var(--vh, 1vh) * 5); /* 5vh */
+    overflow: auto;
+    height: calc(var(--vh, 1vh) * 100 - calc(var(--vh, 1vh) * 15)); /* 100vh - (10vh + 5vh) */
 }
