--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -29,3 +29,61 @@
     padding: 0;
     vertical-align: middle;
 }
+.menu {
+    position: absolute;
+    top: 100%; /* Меню будет располагаться под иконкой */
+    right: 0;
+    background-color: #333;
+    padding: 10px;
+    z-index: 1000; /* Чтобы меню находилось над остальными элементами */
+}
+
+.menu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu ul li {
+    margin-bottom: 10px;
+}
+
+.menu ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.menu ul li a:hover {
+    text-decoration: underline;
+}
+
+.menu {
+    position: absolute;
+    top: 100%; /* Меню будет располагаться под иконкой */
+    right: 0;
+    background-color: #333;
+    padding: 10px;
+    z-index: 1000; /* Чтобы меню находилось над остальными элементами */
+}
+
+.menu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu ul li {
+    margin-bottom: 10px;
+}
+
+.menu ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.menu ul li a:hover {
+    text-decoration: underline;
+}
+
