--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,15 +3,17 @@
     align-items: center;
     justify-content: space-between;
     padding: 0.5rem 1rem;
-    background-color: #6bca6b;
+    background-color: var(--primary-nav-background-color);
+    position: relative;
+    z-index: 10;
 }
 
-.logo img, .menu-icon {
+.logo img, .Hamburger {
     cursor: pointer;
 }
 
 .title {
-    color: #ed0000;
+    color: var(--primary-color-red);
 }
 
 .logo a {
@@ -29,13 +31,16 @@
     padding: 0;
     vertical-align: middle;
 }
+
 .menu {
     position: absolute;
-    top: 100%; /* Меню будет располагаться под иконкой */
+    top: 100%;
     right: 0;
-    background-color: #333;
-    padding: 10px;
-    z-index: 1000; /* Чтобы меню находилось над остальными элементами */
+    background-color: var(--primary-menu-background-color);
+    padding: 20px;
+    z-index: 1000;
+    border-radius: 0 0 0 20px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
 }
 
 .menu ul {
@@ -45,45 +50,31 @@
 }
 
 .menu ul li {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .menu ul li a {
     color: white;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 22px;
+    position: relative;
 }
 
 .menu ul li a:hover {
-    text-decoration: underline;
-}
-
-.menu {
-    position: absolute;
-    top: 100%; /* Меню будет располагаться под иконкой */
-    right: 0;
-    background-color: #333;
-    padding: 10px;
-    z-index: 1000; /* Чтобы меню находилось над остальными элементами */
-}
-
-.menu ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.menu ul li {
-    margin-bottom: 10px;
-}
-
-.menu ul li a {
-    color: white;
+    color: #FFD700;
     text-decoration: none;
-    font-size: 18px;
 }
 
-.menu ul li a:hover {
-    text-decoration: underline;
+/* Animation for logo spin */
+@keyframes spin {
+    0% {
+        transform: rotateY(0);
+    }
+    100% {
+        transform: rotateY(1440deg); /* 4 complete rotations */
+    }
 }
 
+.motion-logo.spin {
+    animation: spin 2s ease-out;
+}
